{
    "name": "Tivoli Input Actions",
    "maps": [
        {
            "name": "Player",
            "id": "d20a1b4c-7eed-4cec-a338-89053621fd26",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "3c210c2d-07d0-4bbb-b712-dd8e0f2d87b4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Turn",
                    "type": "Value",
                    "id": "4c510699-ea13-466e-bebe-6d48a72b5afc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ToggleMainMenu",
                    "type": "Button",
                    "id": "c5496161-aab4-476d-881e-7cbb8d416459",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8f00b49b-8a71-48f4-b189-9d869de909bf",
                    "path": "<XRController>{LeftHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR Controller",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "3380a239-d661-40b7-bbbe-1055530e67fd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9a496e56-bfcd-4b7c-8279-c533a27c4970",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a2659365-e711-4305-a7e3-c5635fe97972",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fd154507-f807-475a-8ac3-456f67fcc155",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e1acd65a-634b-4c04-9c27-f38287c25e47",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "756ec286-6d77-4514-a38b-b5ba1f002d31",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "ToggleMainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e72f0cb8-1d1c-461e-927e-000b5a6211d7",
                    "path": "<ValveIndexController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR Controller",
                    "action": "ToggleMainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13d84cde-b5d0-4b39-bde9-34d728781473",
                    "path": "<XRController>{RightHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR Controller",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "VR Tracking",
            "id": "faa927bb-80c8-49fb-a574-0541c932cbe8",
            "actions": [
                {
                    "name": "CenterEyePosition",
                    "type": "Value",
                    "id": "7dde6ec3-b85e-425e-89ff-1fc31038a8a5",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CenterEyeRotation",
                    "type": "Value",
                    "id": "acf5c778-1e49-4c4f-81e1-70737d6e4a9c",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftHandPosition",
                    "type": "Value",
                    "id": "80373e99-05a4-43fa-9ae5-252bfa7df4f1",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftHandRotation",
                    "type": "Value",
                    "id": "0d937105-1354-41d2-837a-c8db3a54c6f9",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightHandPosition",
                    "type": "Value",
                    "id": "0d91adb9-322f-4fff-92f2-2d524b6963be",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightHandRotation",
                    "type": "Value",
                    "id": "839ccf1b-37ba-44f8-9064-6c14adb15367",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2208d180-f484-4d8f-beff-bfa1c26c2bec",
                    "path": "<XRHMD>/centerEyePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CenterEyePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "3D Vector",
                    "id": "c45cdcbc-d3f6-4689-9c88-5c83d7c8e2e4",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CenterEyePosition",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "40584edd-1672-44c6-84b0-aada6ccccad9",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "CenterEyePosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "60b43929-bb7e-482c-90a3-9b691e7f25e2",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "CenterEyePosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b9a4d658-cbca-4dec-b720-17e05a1d16d7",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CenterEyePosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7c1a3810-46cc-4237-bfc5-df1cb415a73b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CenterEyePosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "23582f81-5f7a-4c52-8df3-548714f521be",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CenterEyePosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "af2cc3b8-fcaf-47b6-94b2-c73b3871fcb9",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CenterEyePosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e829f89b-e0cc-4f49-ad05-ff88c42fcadc",
                    "path": "<XRController>{LeftHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR Controller",
                    "action": "LeftHandPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e37213d8-d74d-4d16-a6f4-d0bc388937eb",
                    "path": "<XRHMD>/centerEyeRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CenterEyeRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fa3bbb0-4444-4498-9bed-75bfab4daee8",
                    "path": "<XRController>{LeftHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR Controller",
                    "action": "LeftHandRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "257fc299-41de-4ce1-9c11-7284c8ecf1ef",
                    "path": "<XRController>{RightHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR Controller",
                    "action": "RightHandPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d0a6c67-efc8-486b-abac-1ff6a077714d",
                    "path": "<XRController>{RightHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR Controller",
                    "action": "RightHandRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Unused Player",
            "id": "2d22cebc-7e29-450c-a48f-656a6a052df7",
            "actions": [
                {
                    "name": "ThirdPersonLook",
                    "type": "Value",
                    "id": "ad972676-69d0-4526-83ca-d2d7d155a1a8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ThirdPersonActivateLook",
                    "type": "Button",
                    "id": "309b5339-dcef-487b-b924-95e8aa733f52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThirdPersonBoomLength",
                    "type": "Value",
                    "id": "ee34af99-741b-4709-a18a-dfccab732735",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "10c5dd40-76dc-4568-adbd-a2d8f310bc52",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThirdPersonLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03d76122-b207-478a-9773-5c7622d6405d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThirdPersonActivateLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "409e878a-6574-449b-86d9-5e9f4fbd76e1",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThirdPersonBoomLength",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR Controller",
            "bindingGroup": "XR Controller",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}